And more spelling fixes

--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -642,8 +642,8 @@ annex.163.d:0 "The Grand Duchy of Luxembourg was formerly an independent state. 
 annex.163.a:0 "Liberate Luxembourg"
 annex.163.b:0 "The whole of the Grand Duchy shall be integrated in Belgium"
 annex.164.t:0 "Fate of Lithuania"
-annex.164.d_revolt:0 "The revolt in the duchy of Lithuania is finally over and the German boots are now marching through the center of Vilnius. We have to make sure such a rebellion will never happen again by securing the area and purging the political area from subsersive persons. For now the decision that lies in our hands is: How to manage the territory we now occupy?"
-annex.164.d_norevolt:0 "Lithuania has been rebrought under our leadership and our troops occupy the area. We must now decide what to do with it."
+annex.164.d_revolt:0 "The revolt in the duchy of Lithuania is finally over and the German boots are now marching through the centre of Vilnius. We have to make sure such a rebellion will never happen again by securing the area and purging the political area from subversive persons. For now the decision that lies in our hands is: How to manage the territory we now occupy?"
+annex.164.d_norevolt:0 "Lithuania has been brought under our leadership again and our troops occupy the area. We must now decide what to do with it."
 annex.164.a:0 "Release a loyal Lithuania"
 annex.165.t:0 "Fate of Thessaloniki"
 annex.165.d:0 "After our occupation of the area around Thessaloniki we were left with a dilemma concerning who should administrate the land. Should we transfer it to Greece or Bulgaria? Greece has an historical population in Thessaloniki but Bulgaria has now controlled it for more than 15 years and transferring the administration to it might be easier." 
