--- a/localisation/KR_General_l_english.yml
+++ b/localisation/KR_General_l_english.yml
@@ -30,7 +30,7 @@ KR_SCENARIO_DESC:0 "The year of 1936 is a turning point for the history of the w
 GER_KR_GATHERING_STORM_DESC:0 "In 1919, after five years of war, the German army finally overran the Entente defences in France. In 1921, Britain's surrender followed. The Weltkrieg has made Germany an uncontested World Power, yet things have been going downhill for her since the 1930s. A recessive world economy has dampened the nation's industrial output while other nations' manufacturing power recovers, and now nationalism grows in Germany's eastern client states, who are starting to drift away from the Reich. In 1936, Germany stands at a crossroads, and already we can see cracks in her mighty empire, as her ancestral enemies are regaining their former strength..."
 
 ### Austria ###
-AUS_KR_GATHERING_STORM_DESC:0 "'Indivisible and Inseperable' - the aftermath of the Weltkrieg proved the Dual Monarchy to be otherwise. After Kaiser Karl's sudden death in 1922, the throne passed to his 10-year-old son Otto, and the political chaos that followed was stopped only by a German intervention - at a heavy cost. The Ukraine was lost, and Bohemia and Galicia-Lodomeria, as well the new pan-slavic Kingdom of Illyria now all held some nominal autonomy, and the Empire seemed to be held together by a thin thread. However, Kaiser Otto has now come of age and the status quo is unlikely to remain as such. Will Austria reform, or will she return to her old ways? Only time will tell..."
+AUS_KR_GATHERING_STORM_DESC:0 "'Indivisible and Inseparable' - the aftermath of the Weltkrieg proved the Dual Monarchy to be otherwise. After Kaiser Karl's sudden death in 1922, the throne passed to his 10-year-old son Otto, and the political chaos that followed was stopped only by a German intervention - at a heavy cost. The Ukraine was lost, and Bohemia and Galicia-Lodomeria, as well the new pan-Slavic Kingdom of Illyria now all held some nominal autonomy, and the Empire seemed to be held together by a thin thread. However, Kaiser Otto has now come of age and the status quo is unlikely to remain as such. Will Austria reform, or will she return to her old ways? Only time will tell..."
 
 ### Commune of France ###
 FRA_KR_GATHERING_STORM_DESC:0 "The 3rd Republic ended in the way it began: defeated by German arms, and facing Revolution at home. In 1919, a General Strike was called by the CGT, causing the downfall of the bourgeois government. For 15 years, the new 'Commune of France' has united behind a common platform of Syndico-Socialist consensus, headed by the Comité de Salut Public. However, by 1936 the need to rebuild the country and defend the revolution is believed to be outdated by many critics and there is a growing call for more radical policies. France is confident in her mission, but it is unclear which revolutionary strands shall become dominant in the years to come..."
@@ -557,9 +557,9 @@ generic_doctrine_effort_desc:0 "We know about the Weltkrieg, but what have we le
 generic_equipment_effort_2:0 "Equipment Research"
 generic_equipment_effort_2_desc:0 "We might have caught up to modern equipment, but new designs are already making ours obsolete. Regardless, we must persevere, and make sure that we never fall a single year behind in equipment. This means we will have to start developing our own designs."
 generic_mechanization_effort:0 "Mechanised Warfare"
-generic_mechanization_effort_desc:0 "Trucks fared poorly on the frontlines, but it seems that we can now meet halfway between trucks and tanks. Armored personal carriers can bring troops directly into combat, shield them from fire, and even provide powerful fire support if needed."
+generic_mechanization_effort_desc:0 "Trucks fared poorly on the frontlines, but it seems that we can now meet halfway between trucks and tanks. Armoured personal carriers can bring troops directly into combat, shield them from fire, and even provide powerful fire support if needed."
 generic_doctrine_effort_2:0 "Military Exercises"
-generic_doctrine_effort_2_desc:0 "Every great power exercises, and so should we. War games are more than peacetime entertainement for generals, they allow us to test both true and tested and revolutionary tactics without wasting countless lives. This allows us to complete our theorical discoveries."
+generic_doctrine_effort_2_desc:0 "Every great power exercises, and so should we. War games are more than peacetime entertainment for generals, they allow us to test both true and tested and revolutionary tactics without wasting countless lives. This allows us to complete our theoretical discoveries."
 generic_equipment_effort_3:0 "Equipment Breakthroughs"
 generic_equipment_effort_3_desc:0 "We have come to such an experience in equipment research that we are no longer limited to eternally catching up or buying foreign equipment to get cutting-edge military gear. Even great powers may soon be surprised by what will soon be in our soldiers' hands."
 generic_armor_effort:0 "Armoured Warfare"
@@ -575,7 +575,7 @@ generic_fighter_focus_desc:0 "The dogfights of the Weltkrieg were merely the sta
 generic_bomber_focus:0 "Strategic Bombing"
 generic_bomber_focus_desc:0 "Even when they were brand new, bombers inspired fear, and many saw their potential. As payloads get larger and bigger, even the artillery barrages of the Weltkrieg fail to compare. Some day, we may even surpass them, and destroy entire cities or regions in one run."
 generic_aviation_effort_2:0 "Modern Air Tactics"
-generic_aviation_effort_2_desc:0 "Planes have long stopped being just reconnaissance and harassment tools. By integrating them fully into our army operations, the Airforce is capable of dealing as much damage and advancing our operations as much as the average Army Command."
+generic_aviation_effort_2_desc:0 "Planes have long stopped being just reconnaissance and harassment tools. By integrating them fully into our army operations, the airforce is capable of dealing as much damage and advancing our operations as much as the average Army Command."
 generic_CAS_effort:0 "Close Air Support"
 generic_CAS_effort_desc:0 "While Fighters and Bombers can indirectly affect the battle, dedicated CAS planes have both the agility and armament needed to perform strafe and bombing runs on ground targets, causing major damage on unprepared armies while handling decently in aerial combat."
 generic_rocket_effort:0 "Experimental Rocketry"
@@ -600,15 +600,15 @@ generic_capital_ships_effort:0 "Capital Ships"
 generic_capital_ships_effort_desc:0 "Eventually, a fleet is nothing without a centrepiece, and both the old Battleship and modern Carrier fit this role. While vulnerable in a direct confrontation, they can bring massive damage upon enemy fleets if we let them shell and swarm the enemy ships from a safe distance."
 
 generic_industrial_effort:0 "Industrial Methods"
-generic_industrial_effort_desc:0 "To construct a large industrial base, we will need to set up the basics of modern industry, and maybe even make initial choices. Concentrated or dispersed industrial centers, investing in machine tools and construction tools. All of those are important things to focus on."
+generic_industrial_effort_desc:0 "To construct a large industrial base, we will need to set up the basics of modern industry, and maybe even make initial choices. Concentrated or dispersed industrial centres, investing in machine tools and construction tools. All of those are important things to focus on."
 generic_construction_effort:0 "Industrial Grants"
 generic_construction_effort_tt:0 "Not enough building slots for §YCivilian Factories§!"
-generic_construction_effort_desc:0 "A healthy and strong industry doesn't just appear out of nowhere. While we may have to start more ambitious projects later, we must start by ensuring that those with good management skills can start healthy, succesful companies that may later grow into giants."
+generic_construction_effort_desc:0 "A healthy and strong industry doesn't just appear out of nowhere. While we may have to start more ambitious projects later, we must start by ensuring that those with good management skills can start healthy, successful companies that may later grow into giants."
 generic_production_effort:0 "State Armouries"
 generic_production_effort_tt:0 "Not enough building slots for §YMilitary Factory§!"
 generic_production_effort_desc:0 "Until we are able to produce our own military equipment, we should create modern armouries for our army. Their goal is quite modest, procuring the gear our army needs using state funds, civilian production and simple production, but it is better than not getting any new rifles."
 generic_construction_effort_2:0 "Industrial Centres"
-generic_construction_effort_2_desc:0 "Entrepeneurship is one thing, but to have an economy worthy of even a regional power, we will need to foster the large industrial regions that made the Industrial Revolution. The seeds of such regions are large investment into promising industrial sites."
+generic_construction_effort_2_desc:0 "Entrepreneurship is one thing, but to have an economy worthy of even a regional power, we will need to foster the large industrial regions that made the Industrial Revolution. The seeds of such regions are large investment into promising industrial sites."
 generic_production_effort_2:0 "Military Manufactures"
 generic_production_effort_2_desc:0 "We must produce our own military equipment if we want our army to be more than a reserve force. The only way to do so is to heavily fund the creation of dedicated military manufactures, and support them with regular contracts and promises to ensure they can stay afloat."
 generic_production_effort_3:0 "Military Industry"
@@ -634,7 +634,7 @@ generic_secret_weapons_desc:0 "It is tempting to expend all extra resources into
 generic_political_effort:0 "Political Reform"
 generic_political_effort_desc:0 "To bring about change in the world, we need to be able to bring about change in our own country. Strengthening our political position should come first, we need to do away with old political doctrine and be ready to adopt bold, ambitious views on how our nation is to be ruled from now on."
 generic_collectivist_ethos_kr:0 "Unite The Nation"
-generic_collectivist_ethos_kr_desc:0 "This era is a strange one, with the rise of Syndicalism, the fragile position of Democracy and the maintained Authoritarian old order. We must protect our country from outside influences by ensuring our people believe in the foundating values of our country, least we are washed away by opposing views."
+generic_collectivist_ethos_kr_desc:0 "This era is a strange one, with the rise of Syndicalism, the fragile position of Democracy and the maintained Authoritarian old order. We must protect our country from outside influences by ensuring our people believe in the founding values of our country, least we are washed away by opposing views."
 generic_militarism:0 "Militarism"
 generic_militarism_desc:0 "Those who view the military as a necessary evil are doomed to hesitate in the face of war. We will ingrain militarism into our culture to become a people of soldiers, if not an army with a state. If one thing is certain since the Weltkrieg, it is that it might very well not have been The War To End War."
 generic_military_youth:0 "Military Youth"
@@ -644,11 +644,11 @@ generic_ideological_fanaticism_desc:0 "Our politically established values and go
 generic_liberty_ethos_kr:0 "Spirit Of Freedom"
 generic_liberty_ethos_kr_desc:0 "Freedom is not just a happy happenstance, it is something that must be preserved against tyranny. The Weltkrieg and the rise of Syndicalism has to many put this spirit in doubt, but no nation is too small to rekindle its flame in their governments and populaces and ward against those trying to extinguish it."
 generic_rights_of_man:0 "The Rights Of Man"
-generic_rights_of_man_desc:0 "The Rights Of Man is perhaps the foundating act of the modern Democracy, doing away with the feudal order and ensuring equal rights for all. There have always the odd doubts about our stance on those essential rights, and we will dispel them without ambiguity. We only stand to benefit from it."
+generic_rights_of_man_desc:0 "The Rights Of Man is perhaps the founding act of the modern Democracy, doing away with the feudal order and ensuring equal rights for all. There have always the odd doubts about our stance on those essential rights, and we will dispel them without ambiguity. We only stand to benefit from it."
 generic_liberty_research:0 "University Grants"
 generic_liberty_research_desc:0 "The modern University is a great achievement, allowing people of even modest origin to elevate themselves via higher learning. However, this requires us to fund university grants to allow such access to poorer but aspiring students. Let's make that move now, these future scholars will pay dividends."
 generic_welfare:0 "Welfare Programs"
-generic_welfare_desc:0 "Equality in rights and equality in education are two important milestones, but economic equality is perhaps the hardest. While we might never reach a perfect equality in this area, we can at least prop up the poorest in our country with fair wellfare programs. This ought to help our consumer economy speed up, too."
+generic_welfare_desc:0 "Equality in rights and equality in education are two important milestones, but economic equality is perhaps the hardest. While we might never reach a perfect equality in this area, we can at least prop up the poorest in our country with fair welfare programs. This ought to help our consumer economy speed up, too."
 generic_national_identity:0 "National Identity"
 generic_national_identity_desc:0 "While the ideological debate is one we could get lost in for ages, we must not forget who we are at our core. We are unique, we know our history, our culture and we hope that our destiny is even more brilliant. If we have shaped a better society today, we will shape an even better country tomorrow."
 
