--- a/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -141,8 +141,8 @@ CAL_californian_aog_offices:0 "Open AOG offices"
 CAL_californian_aog_offices_desc:0 "Of all the German Companies that we do business with, the one that we work with the most is the AOG. We should work to open up several business offices in the Pacific for the AOG and other German Companies. As well making sure that Pacific Businesses have offices oversees in Germany and the AOG as well."
 CAL_german_freindship:0 "German Friendship"
 CAL_german_freindship_desc:0 "We should work to help make sure that we are on good terms with the German Empire. We have joined them but we should make sure that our new found allies will trust us and know that we are committed to Mitteleuropa."
-CAL_join_kaiser_society:0 "Join The Kaiser Willhelm Society"
-CAL_join_kaiser_society_desc:0 "Now that we have good ties both business and political with the German Empire we should seek to join The Kaiser Willhelm Society. By working with the Germans we can help improve our own research potential and improve theirs as well."
+CAL_join_kaiser_society:0 "Join The Kaiser Wilhelm Society"
+CAL_join_kaiser_society_desc:0 "Now that we have good ties both business and political with the German Empire we should seek to join The Kaiser Wilhelm Society. By working with the Germans we can help improve our own research potential and improve theirs as well."
 CAL_join_japan:0 "Join the Co-prosperity Sphere"
 CAL_join_japan_desc:0 "We have had a good relation with the Japanese empire before we became independent and now that we are they remain one of our top trading partners. We should seek to forge an even stronger relationship with the Japanese Empire and join their Co-Prosperity Sphere."
 CAL_japanese_freindship:0 "Japanese Friendship"
@@ -189,7 +189,7 @@ CAL_aog_offices:0 "German – Pacific business ties"
 CAL_general_strike_malus:0 "West Coast General Strike"
 CAL_free_thought:0 "Free Thought"
 CAL_land_of_immigrant:0 "Land of Immigrants"
-CAL_californian_nationalism:0 "Pacifican Nationalism"
+CAL_californian_nationalism:0 "Pacific Nationalism"
 
 ### Parties ###
 CAL_totalist_party:0 "CPS"
