--- a/localisation/KR_Spain_Carlist_l_english.yml
+++ b/localisation/KR_Spain_Carlist_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
-### National Focuses ###
+### Focuses ###
 CAR_assassinate_prince:0 "Assassinate the Crown Prince"
 CAR_assassinate_prince_desc:0 "Our agents believe that they can kill the Crown Prince - this would clear help clear the road to Xavier becoming the king and put our enemies into chaos."
 CAR_election_success:0 "Election Success"
