--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -162,7 +162,7 @@ SPR_recover_black_monday_desc:0 "It has been a long road, and Spain was perhaps 
 SPR_university:0 "Centro de Estudios Universitarios"
 SPR_university_desc:0 "Established in 1933 by the Asociación Católica de Propagandistas, the Centro de Estudios Universitarios is a foundation  for the development of education. It controlled and supported only a few universities like the Universidad de Deusto, but now it will gain control over the entire educational structure of our country."
 SPR_radio_focus:0 "Central Spanish Broadcast"
-SPR_radio_focus_desc:0 "Radio is the way of the future - we must center it here in Madrid, and find a way to turn it to our advantage."
+SPR_radio_focus_desc:0 "Radio is the way of the future - we must centre it here in Madrid, and find a way to turn it to our advantage."
 SPR_electronics_focus:0 "Focus on Electronics"
 SPR_electronics_focus_desc:0 "Electronics and computers are how we will compete - we must learn ways to keep our information secure, while simultaneously discovering what our enemies plan. We will never gain an advantage if we do not know our enemies are coming."
 SPR_united_minds:0 "Uniting Minds of Spain"
@@ -181,7 +181,7 @@ SPR_motor_focus_desc:0 "We must get our soldiers off their feet, and focus on gi
 SPR_artillery_focus:0 "Artillery Focus"
 SPR_artillery_focus_desc:0 "Firepower - this is what we most desperately need. The ability to knock down an enemy's fortifications, and to bombard them into senselessness should they dare cross the Pyrennes."
 SPR_tank_focus:0 "The Spanish Panzer Corps"
-SPR_tank_focus_desc:0 "Heavy armor - it provides both speed and firepower, and it is our clear path to victory in the wars to come."
+SPR_tank_focus_desc:0 "Heavy armour - it provides both speed and firepower, and it is our clear path to victory in the wars to come."
 SPR_army_innovation:0 "Army Innovation"
 SPR_army_innovation_desc:0 "Above all else, we must ensure our army has the finest minds behind it to plan our offence and defence. Without them, all the fine equipment in the world will do us nothing."
 
@@ -359,11 +359,11 @@ sprd.29.a:0 "Peace rules in Spain!"
 sprd.29.b:0 "I see..."
 
 sprd.30.t:0 "[From.GetNameDef] wants to join Mitteleuropa"
-sprd.30.d:0 "[From.GetNameDef] has annouced recently that it wishes to join Mitteleuropa. How shall we respond?"
+sprd.30.d:0 "[From.GetNameDef] has announced recently that it wishes to join Mitteleuropa. How shall we respond?"
 sprd.30.a:0 "Absolutely, they are welcome"
 sprd.30.b:0 "It's not a good idea"
 sprd.31.t:0 "[From.GetNameDef] wants to join the Entente"
-sprd.31.d:0 "[From.GetNameDef] has annouced recently that it wishes to join the Entente. How shall we respond?"
+sprd.31.d:0 "[From.GetNameDef] has announced recently that it wishes to join the Entente. How shall we respond?"
 sprd.32.t:0 "[From.GetName] Agrees"
 sprd.32.d:0 "[From.GetNameDef] has agreed that [Root.GetNameDef] will be a useful addition to their faction. An alliance between the two nations has now been created."
 sprd.32.a:0 "We have thrown our lot in with theirs..."
@@ -409,7 +409,7 @@ sprc.1.a:0 "We shall fight them!"
 sprc.1.b:0 "Long live Javier I! (Play as the §YCarlists§!)"
 
 sprc.2.t:0 "Carlist Spain rises up!"
-sprc.2.d:0 "After a century of struggle, the Legitimist Cause has again risen up, to bring justice and Christian rule back to Spain!"
+sprc.2.d:0 "After a century of struggle, the Legitimate Cause has again risen up, to bring justice and Christian rule back to Spain!"
 sprc.2.a:0 "Vivo Cristo Rey!"
 
 sprc.3.t:0 "CNT uprising!"
@@ -418,7 +418,7 @@ sprc.3.a:0 "We shall fight to stop this revolution!"
 sprc.3.b:0 "Viva la Revolución! (Play as the §YCNT-FAI§!)"
 
 sprc.4.t:0 "CNT Spain rises up! ¡A las barricadas!"
-sprc.4.d:0 "Collectivize and mobilise, for Social Revolution!"
+sprc.4.d:0 "Collectivise and mobilise, for Social Revolution!"
 sprc.4.a:0 "Arise, workers of Spain!"
 
 ### SPR ###
