--- a/localisation/KR_General_l_english.yml
+++ b/localisation/KR_General_l_english.yml
@@ -644,7 +644,7 @@ generic_ideological_fanaticism_desc:0 "Our politically established values and go
 generic_liberty_ethos_kr:0 "Spirit Of Freedom"
 generic_liberty_ethos_kr_desc:0 "Freedom is not just a happy happenstance, it is something that must be preserved against tyranny. The Weltkrieg and the rise of Syndicalism has to many put this spirit in doubt, but no nation is too small to rekindle its flame in their governments and populaces and ward against those trying to extinguish it."
 generic_rights_of_man:0 "The Rights Of Man"
-generic_rights_of_man_desc:0 "The Rights Of Man is perhaps the founding act of the modern Democracy, doing away with the feudal order and ensuring equal rights for all. There have always the odd doubts about our stance on those essential rights, and we will dispel them without ambiguity. We only stand to benefit from it."
+generic_rights_of_man_desc:0 "The Rights Of Man is perhaps the founding act of the modern Democracy, doing away with the feudal order and ensuring equal rights for all. There have always been the odd doubts about our stance on those essential rights, and we will dispel them without ambiguity. We only stand to benefit from it."
 generic_liberty_research:0 "University Grants"
 generic_liberty_research_desc:0 "The modern University is a great achievement, allowing people of even modest origin to elevate themselves via higher learning. However, this requires us to fund university grants to allow such access to poorer but aspiring students. Let's make that move now, these future scholars will pay dividends."
 generic_welfare:0 "Welfare Programs"
