Tweak a few loading tips

--- a/localisation/KR_Loading_Tips_l_english.yml
+++ b/localisation/KR_Loading_Tips_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
-LOADING_TIP_0:0 "In one word - we do not want to place anyone into the shadow, but we also claim our place in the sun.\n- German Foreign Minister Bernhard von Bülow, 1897"
+LOADING_TIP_0:0 "In a word: We want to put no one into the shade, but we claim our place on the sun as well. \n- German Foreign Minister Bernhard von Bülow, 6 December 1897"
 LOADING_TIP_1:0 "Despite the fact that we have no such fleet as we should have, we conquered for ourselves a place in the sun. \n- Kaiser Wilhelm II"
-LOADING_TIP_2:0 "My Share Our Wealth program is the only defence this country’s got against Syndicalism. \n- Huey Long"
-LOADING_TIP_3:0 "Pax Christi in regno Christi' (the peace of Christ in the reign of Christ) \n- Pius XI"
+LOADING_TIP_2:0 "My 'Share Our Wealth' program is the only defence this country’s got against Syndicalism. \n- Huey Long"
+LOADING_TIP_3:0 "'Pax Christi in Regno Christi' (The Peace of Christ in the Kingdom of Christ) \n- Pius XI"
 LOADING_TIP_4:0 "Our aim is the creation in our country of a society of free and equal man, where no man will ever exploit another man. \n- Palmiro Togliatti"
 LOADING_TIP_5:0 "Together in Britain we have lit a flame that the ages shall not extinguish. \n- Oswald Mosley"
 LOADING_TIP_6:0 "I am not, and never have been, a man of the right. My position was on the left and is now in the centre of politics. \n- Oswald Mosley"
@@ -43,7 +43,7 @@ LOADING_TIP_40:0 "My name is surrounded with such hate and fear that no one can 
 LOADING_TIP_41:0 "It would appear that we select presidents as we select jurors, on the ground that they have no opinions that can be discovered. \n- Norman Thomas"
 LOADING_TIP_42:0 "Freedom means Freedom for the Group, not Freedom for the Individual. Men must not be slaves to other men, but they must be slaves to their group. \n- Liang Qichao"
 LOADING_TIP_43:0 "When the white man turns tyrant, it is his own freedom that he destroys. He becomes a... posing dummy, the shallow figure of a sahib... He wears a mask, and his face grows to fit it. \n- Eric Blair"
-LOADING_TIP_44:0 "Le Prussianisme — voila l'ennemi! \n- Joseph Conrad"
+LOADING_TIP_44:0 "Le Prussianisme - voila l'ennemi! \n- Joseph Conrad"
 LOADING_TIP_45:0 "The whole of the Balkans is not worth the bones of a single Pomeranian grenadier. \n- Otto von Bismarck"
 LOADING_TIP_46:0 "Don’t you dare let them put me in Westminster Abbey. \n- John McLean"
 LOADING_TIP_47:0 "Politics is a gentleman's game. \n- Muhammed Ali Jinnah"
@@ -51,14 +51,14 @@ LOADING_TIP_48:0 "To rebellion! Rise up, brothers, against all government, destr
 LOADING_TIP_49:0 "Names and individuals are unimportant when Germany's final fate is at stake. \n- Franz von Papen"
 LOADING_TIP_50:0 "Whoever looks at America will see that the ship is powered by stupidity, corruption, or prejudice. \n- Johann Most"
 LOADING_TIP_51:0 "I am an Imperialist because I will not be a Colonial. \n- Stephen Leacock"
-LOADING_TIP_52:0 "Optimism is cowardice. \n- Oswald Spengler "
+LOADING_TIP_52:0 "Optimism is cowardice. \n- Oswald Spengler"
 LOADING_TIP_53:0 "My reign shall end only by constitutional decree, or a bullet. \n- President Kerensky"
 LOADING_TIP_54:0 "And that is war in a nutshell: the master class has always declared the wars, and the subject class has always fought the battles. \n- Eugene V. Debs"
-LOADING_TIP_55:0 "The Chinese people have only family and clan solidarity - they do not have national spirit \n- Sun Yat-sen (1924)"
+LOADING_TIP_55:0 "The Chinese people have only family and clan solidarity; they do not have national spirit \n- Sun Yat-sen (1924)"
 LOADING_TIP_56:0 "It takes a great deal of Christianity to wipe out uncivilised Eastern instincts, such as falling in love at first sight. \n- Rudyard Kipling (1888)"
 LOADING_TIP_57:0 "In a man to man fight, the winner is he who has one more round in his magazine. \n- Erwin Rommel (1937)"
 LOADING_TIP_58:0 "Regard your soldiers as your children, and they will follow you into the deepest valleys - look on them as your own beloved sons,and they will stand by you even unto death. \n- Sun Tzu"
-LOADING_TIP_59:0 "Perseverance is more prevailing than violence - and many things which cannot be overcome when they are together, yield themselves up when taken little by little. \n- Plutarch"
+LOADING_TIP_59:0 "Perseverance is more prevailing than violence; and many things which cannot be overcome when they are together, yield themselves up when taken little by little. \n- Plutarch"
 LOADING_TIP_60:0 "Malice delights to blacken the characters of prominent men. \n- Napoleon I Bonaparte"
 LOADING_TIP_61:0 "Imperialism is a spirit, an attitude of mind, an unconquerable hope. You can phrase it in a thousand ways without exhausting its content. It is a sense of the destiny of England. \n-Sir John Buchan"
 LOADING_TIP_62:0 "The glory of England is not the mileage of her territory but the state into which she is welding it. \n- Sir John Buchan"
@@ -96,7 +96,7 @@ LOADING_TIP_93:0 "We possess a European symbol which belongs to all nations of E
 LOADING_TIP_94:0 "It is the battle for the control of the European superstate. \n- Kaiser Otto I of Austria"
 LOADING_TIP_95:0 "The only thing you learn from history is that no one learns anything from history. \n- Kaiser Otto I of Austria"
 LOADING_TIP_96:0 "When we want an airplane, we get an airplane, when we want an artillery piece, we get an artillery piece; whatever we ask for we get from Japan. \n- Zhang Zuolin"
-LOADING_TIP_97:0 "Why do I hate the communists? These devils? They killed my son and burned my house...They must be burned at the stakes... \n- Boris Savinkov, The Black Horse"
+LOADING_TIP_97:0 "Why do I hate the communists? These devils? They killed my son and burned my house. They must be burned at the stakes. \n- Boris Savinkov, The Black Horse"
 LOADING_TIP_98:0 "We captured Moscow at the dawn. We won. But I don't feel joy and rapture. Because the Russians defeated the Russians. \n- Boris Savinkov, The Black Horse"
 LOADING_TIP_99:0 "There is nothing under the sun that the Siamese police cannot do. \n- Phao Sriyanond"
 LOADING_TIP_100:0 "Give me a Japanese division armed with bamboo spears and I'll wipe out the entire Russian Far Eastern Army. \n- Sadao Araki"
