The Kaiser's Dyson Sphere will have to wait

--- a/localisation/KR_Loading_Tips_l_english.yml
+++ b/localisation/KR_Loading_Tips_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
-LOADING_TIP_0:0 "In a word: We want to put no one into the shade, but we claim our place on the sun as well. \n- German Foreign Minister Bernhard von Bülow, 6 December 1897"
+LOADING_TIP_0:0 "In a word: We want to put no one into the shade, but we claim our place in the sun as well. \n- German Foreign Minister Bernhard von Bülow, 6 December 1897"
 LOADING_TIP_1:0 "Despite the fact that we have no such fleet as we should have, we conquered for ourselves a place in the sun. \n- Kaiser Wilhelm II"
 LOADING_TIP_2:0 "My 'Share Our Wealth' program is the only defence this country’s got against Syndicalism. \n- Huey Long"
 LOADING_TIP_3:0 "'Pax Christi in Regno Christi' (The Peace of Christ in the Kingdom of Christ) \n- Pius XI"
