--- a/localisation/KR_Siam_l_english.yml
+++ b/localisation/KR_Siam_l_english.yml
@@ -143,98 +143,155 @@ siam.501.d:0 "Prasert Eiwchai - a prominent leader of the Siamese Syndicalist mo
 siam.501.a:0 "A State Funeral for Him"
 
 ### NF Tree - very WIP right now, don't touch the description yet ###
-SIA_khana_ratsadon:0 "Khana Ratsadon's Coup d'état"
-SIA_iron_marshal:0 "The Iron Marshal"
-SIA_yuwachontaharn:0 "Yuwachon Taharn"
-SIA_nationalreserveact:0 "National Reserve Act"
-SIA_nationalizationofforeignindustries:0 "Nationalization of Foreign Industries"
-SIA_defensetechnologyinstitute:0 "Defense Technology Institute"
-SIA_ratthaniyomdecrees:0 "Ratthaniyom Decrees"
-SIA_reapporachthemonarchy:0 "Re-approach the Monarchy"
-SIA_nationaldevelopmentplan:0 "National Development Plan"
-SIA_creationoftherepublic:0 "Creation of the Republic"
-SIA_phaopoliceintegration:0 "Phao's Police Integration"
-SIA_ratthasapha_desc:0 "To modernised Siam further - there mus be some bureaucratic reform from the old inefficient Absolute Monarchy.The Anantasamakhom Throne Hall is deemed suitable as a place for the new Ratthasapha (Parliament) building, to allow more people to participate in this nation's development."
-SIA_khana_ratsadon_desc:0 "While Prajadhipok's plan seems nice - they are being implemented at much a slower pace due to the intervention of those who feel that their own interests are being harmed. With those inequalities in the Siamese society, Nepotism among the bureaucrat and the new economic crisis. Khana Ratsadon (People's Party) shall lead the change by removing the biggest obstacle known as the 'Siamese Council of State' from power!"
-SIA_yellowcoverdossier_desc:0 "Luang Praditmanutham (Pridi Panomyong) had propose a socialist constitution aiming to dealt with the inaquality problem within our society such as new land reforms to provide landless farmers with their own land and welfare state. While it did enjoy quite a popular support from the peasants, the old nobilities of course object this plan. Maybe dealing with the devils can guarantee safety of our own nation from the Syndicalist threat?"
-SIA_statewelfare:0 "State-Provided Welfare"
-SIA_halfleafdemocracy_desc:0 "A firm, strong grip of the Monarch to dictate the direction of our country might be needed to counter the waves of Syndicalist threat properly. By granting the king more power such as appointing his own Prime Minister, immunity from persecution by law and others, we might be loosing popular support from the liberals but that will guarantee stability in the long run."
-SIA_prestigious_senate_desc:0 "Wutthisapha (Senate) is created to mimic the British House of Lords in mind. By allowing the King to pick those who're both royal and experienced himself, we can probably prevent some of those too radical bills to pass."
-SIA_privycouncilreforms_desc:0 "With the Siamese Council of States dictating the king's policies from the shadows for a long time - reforming the old Privvy Council with like-minded advisers might be able to compete in influence with them and become the main driving force for our nation eventually."
-SIA_empowerthenobility_desc:0 "Maybe by modernising the old Nobility system into the one based on Meritocracy as opposed to abolish it - Efficient bureaucratic system might be achievable this way too."
-SIA_fathergovernschildren_desc:0 "By allowing our subjects to voiced their own problem directly to the Privy Council like the Benevolent King Ramkamhaeng the Great of the Sukothai era. Several issues could be solved at a much faster pace."
-SIA_tourthenation_desc:0 "To know the problem our subjects experienced personally - the King must visit those place personally which also served as a way to increase their trust in the Monarchy."
-SIA_royalprojectfoundation_desc:0 "To tackle with those problems efficiently - a commission needed to be made to find the best solution for those problems and keeping track of those projects."
-SIA_adevotedmonarchy_desc:0 "By working closely with our subjects in developing the nation - we've gain staunch support from the rural areas which also served as a deterrent to the scarlet phantom known as Syndicalist threat."
-SIA_nationwidelandreform_desc:0 "There are lots of lands across the country which is own by the nobilities but left abandoned due to whatever reasons - by distributing them to the poor landless rice farmers, much more productivity can be gained from those lands but that'll surely provoked some landlords."
-SIA_fiveyearplan_desc:0 "By encouraging the development of the rural areas by promoting infrastructure and industrial development - we're well on the road to join the Siwilai (Civilized) countries list like Japan and South America."
-SIA_governmentalreform:0 "Governmental Reform"
-SIA_juridicialreform:0 "Judicial Reform"
-SIA_centralizedpolicecommand:0 "Centralised Police Command"
-SIA_SDSI:0 "SDSI"
-SIA_nationalcurriculumact:0 "National Curriculum Act"
-SIA_regionaluniversities_desc:0 "SIA_regionaluniversities_desc"
-SIA_regionaluniversities:0 "Creation of Regional Universities"
-SIA_kingmongkutinstitute:0 "King Mongkut's Institute of Technology"
-SIA_intialeconomictsabilisation:0 "Initial Economic Stabilisation"
-SIA_kickstartlocalbusiness:0 "Kickstart Local Business"
-SIA_bailoutsiamcement:0 "Bailout Siam Cement"
-SIA_chiangmaioil:0 "Chiang Mai Oil Discovery"
-SIA_thaioilcorp:0 "Thai Oil Corporation"
-SIA_foreignexploit:0 "Foreign Exploitation Contracts"
-SIA_newpetrochemicalwing:0 "New Petrochemical Department"
-SIA_rayonrefineries:0 "Rayong Refineries"
-SIA_newconstructionmethod_desc:0 "SIA_newconstructionmethod_desc"
-SIA_newconstructionmethod:0 "New Construction Method"
-SIA_contractswithchaiseri:0 "Contracts with Chaiseri"
-SIA_rubberplantations:0 "Southern Rubber Plantations"
-SIA_thairungcars:0 "Thairung's Siamese Cars"
-SIA_prototypetankdesign:0 "Prototype Tank Design"
-SIA_petrochemicaldepartment:0 "New Petrochemical Department"
-SIA_sahaviriyasteeldeal:0 "Deal with Sahaviriya Steels"
-SIA_nakhonsiwolfram:0 "Nakhon Si Thammarat Wolfram Miness"
-SIA_kanchanaburiironreservoir:0 "Exploit Kanchanaburi Iron Reservoir"
-SIA_expandloeimines:0 "Expand Loei Iron Mines"
-SIA_tigereconomy:0 "Tiger Club Economy"
-SIA_agriculuralmechanisation:0 "Agricultural Mechanisation"
-SIA_agrarianscoop:0 "Agrarian Co-operatives"
-SIA_communalapproach:0 "Communal Approach"
-SIA_newfarmingtheory:0 "New Farming Theory"
-SIA_selfsufficiencyeconomics_desc:0 "SIA_selfsufficiencyeconomics_desc"
-SIA_selfsufficiencyeconomics:0 "Self-Sufficiency Economics"
-SIA_exportrice:0 "Export-Oriented Rice Production"
-SIA_ricesubsidyscheme:0 "Rice Subsidy Scheme"
-SIA_worldgranary:0 "Granary of the World"
-SIA_nationalhighway:0 "National Highway Commission"
-SIA_railwaygauge:0 "Standardisation of Railway Gauge"
-SIA_isanrailway:0 "Isan Railway Expansion"
-SIA_southernrailway:0 "Southern Railway Expansion"
-SIA_northernrailway:0 "Northern Railway Expansion"
-SIA_maritimesilkroad:0 "Maritime Silkroad Initiative"
-SIA_transtensassarimrailway:0 "Trans-Tenassarim Railway"
-SIA_maptaphuthawaiport_desc:0 "SIA_maptaphuthawaiport_desc"
-SIA_maptaphuthawaiport:0 "Maptaphut-Thawai Port Facilities"
-SIA_kloengtoeidocks:0 "Klongtoei Dockyards"
-SIA_expandmapthaphut:0 "Maptaphut Expansion"
-SIA_merchantmarines:0 "Modern Merchant Marines"
-SIA_foreigninvestment:0 "Foreign Investments"
-SIA_twooceantradinghub:0 "Two-Ocean Trading Hub"
-SIA_aliberalsiam:0 "A Liberal Siam!"
-SIA_landsofthefree:0 "Lands of the Free!"
-SIA_newsiamsociety:0 "New Siam Society"
-SIA_progressivemeasures:0 "Progressive Measures"
-SIA_modernsiamesenation:0 "Modern Siamese Nation"
-SIA_prajadhipokreform:0 "Prajadhipok's Reform"
-SIA_prajadhipokreform_desc:0 "With the new economic crisis going on - maybe this is the best chance for us to enact new reforms as the old guard nobilities won't voiced much opposition, or will they?"
-SIA_ratthasapha:0 "Formation of the Ratthasapha"
-SIA_halfleafdemocracy:0 "Half-Leaf Democracy"
-SIA_prestigious_senate:0 "The Prestigious Senate"
-SIA_privycouncilreforms:0 "Privy Council Reforms"
-SIA_empowerthenobility:0 "Empower the Nobilities"
-SIA_fathergovernschildren:0 "Father Governs Children"
-SIA_tourthenation:0 "Tour The Nation"
-SIA_royalprojectfoundation:0 "Royal Project Foundation"
-SIA_adevotedmonarchy:0 "A Devoted Monarchy"
-SIA_yellowcoverdossier:0 "Yellow Cover Dossier"
-SIA_nationwidelandreform:0 "Nationwide Land Reform"
-SIA_fiveyearplan:0 "Five-Year Plan"
+ SIA_prajadhipokreform:0 "Prajadhipok's Reform"
+ SIA_prajadhipokreform_desc:0 "With the new economic crisis going on - maybe this is the best chance for us to enact new reforms as the old guard nobilities won't voiced much opposition, or will they?"
+ SIA_ratthasapha:0 "Formation of the Ratthasapha"
+ SIA_halfleafdemocracy:0 "Half-Leaf Democracy"
+ SIA_prestigious_senate:0 "The Prestigious Senate"
+ SIA_privycouncilreforms:0 "Privy Council Reforms"
+ SIA_empowerthenobility:0 "Empower the Nobilities"
+ SIA_fathergovernschildren:0 "Father Governs Children"
+ SIA_tourthenation:0 "Tour The Nation"
+ SIA_royalprojectfoundation:0 "Royal Project Foundation"
+ SIA_adevotedmonarchy:0 "A Devoted Monarchy"
+ SIA_yellowcoverdossier:0 "Yellow Cover Dossier"
+ SIA_nationwidelandreform:0 "Nationwide Land Reform"
+ SIA_fiveyearplan:0 "Five-Year Plan"
+ SIA_aliberalsiam:0 "A Liberal Siam!"
+ SIA_landsofthefree:0 "Lands of the Free!"
+ SIA_newsiamsociety:0 "New Siam Society"
+ SIA_progressivemeasures:0 "Progressive Measures"
+ SIA_modernsiamesenation:0 "Modern Siamese Nation"
+ SIA_khana_ratsadon:0 "Khana Ratsadon's Coup d'état"
+ SIA_iron_marshal:0 "The Iron Marshal"
+ SIA_yuwachontaharn:0 "Yuwachon Taharn"
+ SIA_nationalreserveact:0 "National Reserve Act"
+ SIA_nationalizationofforeignindustries:0 "Nationalization of Foreign Industries"
+ SIA_defensetechnologyinstitute:0 "Defense Technology Institute"
+ SIA_ratthaniyomdecrees:0 "Ratthaniyom Decrees"
+ SIA_reapporachthemonarchy:0 "Reapproach the Monarchy"
+ SIA_nationaldevelopmentplan:0 "National Development Plan"
+ SIA_creationoftherepublic:0 "Creation of the Republic"
+ SIA_phaopoliceintegration:0 "Integration of Police Command"
+ SIA_ratthasapha_desc:0 "To modernized Siam further - there mus be some bureaucratic refrom from the old inefficient Absolute Monarchy.The Anantasamakhom Throne Hall is deemed suitable as a place for the new Ratthasapha (Parliament) bulding, to allow more people to participate in this nation's development."
+ SIA_khana_ratsadon_desc:0 "While Prajadhipok's plan seems nice - they are being implemented at much a slower pace due to the intervention of those who feel that their own interests are being harmed. With those inequalities in the Siamese society, Nepotism among the bureaucrat and the new economic crisis. Khana Ratsadon (People's Party) shall lead the change by removing the biggest obstacle known as the 'Siamese Council of State' from power!"
+ SIA_yellowcoverdossier_desc:0 "Luang Praditmanutham (Pridi Panomyong) had propose a socialist constitution aiming to dealt with the inaquality problem within our society such as new land reforms to provide landless farmers with their own land and welfare state. While it did enjoy quite a popular support from the peasants, the old nobilities of course object this plan. Maybe dealing with the devils can guarantee safety of our own nation from the Syndicalist threat?"
+ SIA_statewelfare:0 "State-Provided Welfare"
+ SIA_halfleafdemocracy_desc:0 "A firm, strong grip of the Monarch to dictate the direction of our country might be needed to counter the waves of Syndicalist threat properly. By granting the king more power such as appointing his own Prime Minister, immunity from persecution by law and others, we might be loosing poppular support from the liberals but that will guarantee stability in the long run."
+ SIA_prestigious_senate_desc:0 "Wutthisapha (Senate) is created to mimic the British House of Lords in mind. By allowing the King to pick those who're both royal and experienced himself, we can probably prevent some of those too radical bills to pass."
+ SIA_privycouncilreforms_desc:0 "With the Siamese Council of States dictating the king's policies from the shadows for a long time - reforming the old Privvy Council with like-minded advisors might be able to compete in influence with them and become the main driving force for our nation eventually."
+ SIA_empowerthenobility_desc:0 "Maybe by modernizing the old Nobility system into the one based on Meritocracy as opposed to abolish it - Efficient bureaucratic system might be achieveable this way too. "
+ SIA_fathergovernschildren_desc:0 "By allowing our subjects to voiced their own problem directly to the Privy Council like the Benevolent King Ramkamhaeng the Great of the Sukothai era. Several issues could be solved at a much faster pace."
+ SIA_tourthenation_desc:0 "To know the problem our subjects experienced personally - the King must visit those place personally which also served as a way to increase their trust in the Monarchy."
+ SIA_royalprojectfoundation_desc:0 "To tackle with those problems efficiently - a commission needed to be made to find the best solution for those problems and keeping track of those projects."
+ SIA_adevotedmonarchy_desc:0 "By working closely with our subjects in developing the nation - we've gain staunch support from the rural areas which also served as a deterrent to the scarlet phantom known as Syndicalist threat."
+ SIA_nationwidelandreform_desc:0 "There are lots of lands across the country which is own by the nobilities but left abandonned due to whatever reasons - by distributing them to the poor landless rice farmers, much more produtivity can be gained from those lands but that'll surely provoked some landlords. "
+ SIA_fiveyearplan_desc:0 "By encouraging the development of the rural areas by promoting infrastructure and industrial development - we're well on the road to join the Siwilai (Civilized) countries list like Japan and South America."
+ SIA_governmentalreform:0 "Governmental Reform"
+ SIA_juridicialreform:0 "Juridicial Reform"
+ SIA_centralizedpolicecommand:0 "Centralized Police Command"
+ SIA_SDSI:0 "SDSI"
+ SIA_nationalcurriculumact:0 "National Curriculum Act"
+ SIA_regionaluniversities_desc:0 "SIA_regionaluniversities_desc"
+ SIA_regionaluniversities:0 "Creation of Regional Universities"
+ SIA_kingmongkutinstitute:0 "King Mongkut's Institute of Technology"
+ SIA_intialeconomictsabilisation:0 "Intial Economic Stabilisaton"
+ SIA_kickstartlocalbusiness:0 "Kickstart Local Business"
+ SIA_bailoutsiamcement:0 "Bailout Siam Cement"
+ SIA_chiangmaioil:0 "Chiang Mai Oil Discovery"
+ SIA_thaioilcorp:0 "Thai Oil Corporation"
+ SIA_foreignexploit:0 "Foreign Exploitation Contracts"
+ SIA_newpetrochemicalwing:0 "New Petrochemical Department"
+ SIA_rayonrefineries:0 "Rayong Refineries"
+ SIA_newconstructionmethod_desc:0 "SIA_newconstructionmethod_desc"
+ SIA_newconstructionmethod:0 "New Construction Method"
+ SIA_contractswithchaiseri:0 "Contracts with Chaiseri"
+ SIA_rubberplantations:0 "Southern Rubber Plantations"
+ SIA_thairungcars:0 "Thairung's Siamese Cars"
+ SIA_prototypetankdesign:0 "Prototype Tank Design"
+ SIA_petrochemicaldepartment:0 "New Petrochemical Department"
+ SIA_sahaviriyasteeldeal:0 "Deal with Sahaviriya Steels"
+ SIA_nakhonsiwolfram:0 "Nakhon Si Thammarat Tungsten Mines"
+ SIA_kanchanaburiironreservoir:0 "Exploit Kanchanaburi Iron Reservoir"
+ SIA_expandloeimines:0 "Expand Loei Iron Mines"
+ SIA_tigereconomy:0 "Tiger Club Economy"
+ SIA_agriculuralmechanisation:0 "Agricultural Mechanisation"
+ SIA_agrarianscoop:0 "Agrarian Co-operatives"
+ SIA_communalapproach:0 "Communal Approach"
+ SIA_newfarmingtheory:0 "New Farming Theory"
+ SIA_selfsufficiencyeconomics_desc:0 "SIA_selfsufficiencyeconomics_desc"
+ SIA_selfsufficiencyeconomics:0 "Self-Sufficiency Economics"
+ SIA_exportrice:0 "Export-Oriented Rice Production"
+ SIA_ricesubsidyscheme:0 "Rice Subsidy Scheme"
+ SIA_worldgranary:0 "Granary of the World"
+ SIA_nationalhighway:0 "National Highway Commission"
+ SIA_railwaygauge:0 "Standardisation of Railway Gauge"
+ SIA_isanrailway:0 "Isan Railway Expansion"
+ SIA_southernrailway:0 "Southern Railway Expansion"
+ SIA_northernrailway:0 "Northern Railway Expansion"
+ SIA_maritimesilkroad:0 "Maritime Silkroad Intiative"
+ SIA_transtensassarimrailway:0 "Trans-Tenassarim Railway"
+ SIA_maptaphuthawaiport_desc:0 "SIA_maptaphuthawaiport_desc"
+ SIA_maptaphuthawaiport:0 "Maptaphut-Thawai Port Facilities"
+ SIA_kloengtoeidocks:0 "Klongtoei Dockyards"
+ SIA_expandmapthaphut:0 "Maptaphut Expansion"
+ SIA_merchantmarines:0 "Modern Merchant Marines"
+ SIA_foreigninvestment:0 "Foreign Investments"
+ SIA_twooceantradinghub:0 "Two-Ocean Trading Hub"
+ SIA_luangphibunplan:0 "Phibunsongkhram's Reform"
+ SIA_seriroengritplan:0 "Seriroengrit's Reform"
+ SIA_phrayaphahonplan:0 "Phahonpolpayuhasena's Plan"
+ SIA_luangphibunplan_desc:0 "Emphasized Superior Firepower Doctrine"
+ SIA_seriroengritplan_desc:0 "Emphasizes Mass Combat Doctrine"
+ SIA_phrayaphahonplan_desc:0 "Emphasizes Grand battleplan Doctrine"
+ SIA_amodernarmy:0 ""
+ SIA_militaryaffairs:0 "Military Affaris"
+ SIA_jungletraining:0 "Jungle Combat Training"
+ SIA_phibunsongkhramplan:0 "Phibunsongkhram's Reform"
+ SIA_femalecorps:0 "Suranaree Corps"
+ SIA_asymmetricalwarfare:0 "Asymmetrical Warfare"
+ SIA_newstandardrifle:0 "New Standard Rifle"
+ SIA_mobilisedlocalindustry:0 "Artillery Research Division"
+ SIA_artilleryresearchdivision:0 "Artillery Research Division"
+ SIA_salacheepphurchard:0 "For the Motherland!"
+ SIA_expandsupportcapaciy:0 "Expand Support Capacity"
+ SIA_armyaffairs:0 "Army Reorganization"
+ SIA_flexiblechainofcommand:0 "Flexible Chain of Command"
+ SIA_royalsiamesearmy:0 "Royal Siamese Army"
+ SIA_specialforce:0 "Special Warfare Command"
+ SIA_counterinsurgencytactics:0 "Counter-Insurgency Tactics"
+ SIA_taharpran:0 "Taharn Pran"
+ SIA_royalmiltaryacademy:0 "Chulachomklao Royal Military Academy"
+ SIA_royalmiltaryacademy_desc:0 "SIA_royalmiltaryacademy_desc"
+ SIA_royalmunitionsfactory:0 "Royal Munitions Factory"
+ SIA_industrialmobilization:0 "Industrial Mobilization Plan"
+ SIA_expandsupportcapacity:0 "Expand Support Capacity"
+ SIA_royalsiamesenavy:0 "Royal Siamese Navy"
+ SIA_expandmarinescorps:0 "Expand Navikkayothin Corps"
+ SIA_newflagship:0 "New Flagship"
+ SIA_coastaldefenseships:0 "Coastal Defense Ships"
+ SIA_riverpatolunit:0 "River Patrol Units"
+ SIA_destroyerfleet:0 "New Chonburi-Class Destroyers"
+ SIA_subships:0 "S-ships Project"
+ SIA_twooceannavy:0 "Two-ocean Navy"
+ SIA_expandsattahip:0 "Expand Sattahip"
+ SIA_wolfpacks:0 "Convoy Hunting"
+ SIA_alargefleet:0 "Fleet in Being"
+ SIA_royalsiameseaircorps:0 "Royal Siamese Air Corps"
+ SIA_airportauthority:0 "Airport Authority of Siam"
+ SIA_antiairsystem:0 "Air Raid Preparations"
+ SIA_thaiaviationindustries:0 "Thai Aviation Industries"
+ SIA_newfighterdesign:0 "New Fighter Design"
+ SIA_newfighterdesign_desc:0 "SIA_newfighterdesign_desc"
+ SIA_defenderofthesea:0 "Defender of the Siamese Waters"
+ SIA_navalbomber:0 "Naval Bomber Focus"
+ SIA_CASfocus:0 "Close Air Support Focus"
+ SIA_tacticalbombers:0 "Tactical Bombers Development"
+ SIA_siamairservice:0 "SIA_siamairservice"
+ SIA_siamairforce:0 "Creation of the Siamese Air Forces"
+ SIA_furtherairdevelopment:0 "Further Air Development"
+ SIA_improvedlandingcraft:0 "Improved Landing Craft"
+ SIA_bangfai:0 "Project Phi Fa"
+ SIA_electronicsresearch:0 "Electronics Research"
+ SIA_radar:0 "RADAR"
+ SIA_rulerofheskies:0 "Protector of the Sky"
