some tweaks to the AUS

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -30,10 +30,10 @@ TEX_army_rangers_desc:0 "Now that we have the plans finalised for the American A
 ### Focuses - Navy ###
 TEX_navy:0 "Building our navy"
 TEX_navy_desc:0 "It is time that we modernise the American Navy. In the past there was the Great White Fleet launched by Theodore Roosevelt that made the world recognise and respect America's naval might. Those days are in the past, however they do not need to be. Let us rebuild the navy and make the world respect the American might again."
-TEX_battle_ships:0 "Halsey's Battleships"
-TEX_battle_ships_desc:0 "William Halsey's plan for the navy focuses on Battleships. To rule the seas we need modern battleships and battlecruisers and then victory will always be in our grasp."
+TEX_battle_ships:0 "Woodward's Battleships"
+TEX_battle_ships_desc:0 "Clark H. Woodward's plan for the navy focuses on Battleships. To rule the seas we need modern battleships and battlecruisers and then victory will always be in our grasp."
 TEX_battle_cruisers:0 "Battle Cruiser efforts"
-TEX_battle_cruisers_desc:0 "As part of Halsey's plan for the navy, we need not just battleships but battlecruisers. To that end let us get to work in researching and building the battlecruisers needed to make the American the pride of the world."
+TEX_battle_cruisers_desc:0 "As part of Woodward's plan for the navy, we need not just battleships but battlecruisers. To that end let us get to work in researching and building the battlecruisers needed to make the American the pride of the world."
 TEX_new_battle_ships:0 "New Battleships"
 TEX_new_battle_ships_desc:0 "To make sure that the American navy remains the envy of the world we must not languish and neglect new ways to make our Battleships better in all regards. To that end let us focus on keeping our navy up to date."
 TEX_carriers:0 "McCain's Carriers"
@@ -128,7 +128,7 @@ TEX_perfect_dictatorship:0 "It Can Happen Here!"
 TEX_perfect_dictatorship_desc:0 "A man is not a dictator when he is given a commission from the people and carries it out. A perfect democracy can come close to looking like a dictatorship, a democracy in which the people are so satisfied they have no complaint.""
 TEX_every_man_a_king:0 "Every Man a King!"
 TEX_every_man_a_king_desc:0 "Those are the things we propose to do. "Every man a king." Every man to eat when there is something to eat - all to wear something when there is something to wear. That makes us all sovereign."
-TEX_american_legion:0 "Apartheid America"
+TEX_american_legion:0 "Jim Crow's America"
 TEX_american_legion_desc:0 "The Great Huey Long has been assassinated! In the chaos William Pelley has taken control and plans on bring a radical extremist vision of America to existence. With him in control, a strongly racists vision for America is being implemented in America."
 TEX_old_southern_money:0 "Corporate Ties"
 TEX_old_southern_money_desc:0 "To keep the new state safe we should work with the corporations and with their wealth we can help belly any chaos that will come about as we establish our new vision for America. It is no issue if they can profit off our vision for America."
@@ -403,52 +403,6 @@ unionstate.18.b:0 "We should avoid this."
 unionstate.19.t:0 "Industrial Resources"
 unionstate.19.d:0 "The American Union State government has come into possession of resources that were left behind. They will help our government in the future."
 unionstate.19.a:0 "Excellent"
-unionstate.20.t:0 "The Grand Council of the America First Union Party"
-unionstate.20.d:0 "The America First Union Party is the only party of the American Union State and is governed by the Grand Council of the America First Union Party. The council elects the Secretary of the America First Union Party who is the Head of the Government and the right hand of the Father of the Nation, Huey Long."
-unionstate.20.a:0 "One country, one party."
-unionstate.21.t:0 "The House of Representatives and the House of Corporations"
-unionstate.21.d:0 "The Congress of American Union State has two chambers. The House of Representatives and the House of Corporations. Members of the House of Representatives are chosen on direct elections whereas those of the House of Corporations are chosen by interest groups, who also choose the Speaker of the House of Corporations (who acts as Minister of Armament)."
-unionstate.21.a:0 "A new Congress!"
-unionstate.22.t:0 "The Supreme Court"
-unionstate.22.d:0 "The Supreme Court represents the just system of the American Union State. Its duty is not only to charge and convict those guilty of treason and crime against the state, but also to review normal cases of national importance. The Chairman of the Supreme Court is the Minister of Security."
-unionstate.22.a:0 "Justice for all!"
-unionstate.23.t:0 "The 1940 elections"
-unionstate.23.d:0 "It is now time for the first free elections in the American Union State. The Grand Council of the America First Union Party, the House of Representatives, the House of Corporations and the Supreme Court will be renewed as from now on will happen once every 7 years. Let the elections begin!"
-unionstate.23.a:0 "We are a free country!"
-unionstate.24.t:0 "The Grand Council of the America First Union Party"
-unionstate.24.d:0 "The America First Union Party must choose its direction. Lindbergh wants a more open and democratic country, Long and Smith are concentrated on the economic development of the nation, Coughlin want to focus on the internal affairs of the country. Kuhn's militaristic rhetoric is more interventionist."
-unionstate.24.a:0 "Lindbergh's faction will lead the party"
-unionstate.24.b:0 "Long's and Smith's faction will lead the party"
-unionstate.24.c:0 "Father Coughlin's faction will lead the party"
-unionstate.24.e:0 "Kuhn's faction will lead the party"
-unionstate.26.t:0 "The New Congress - 1940 elections"
-unionstate.26.d:0 "The most important chamber of the new Congress is the House of Corporations. Which interest groups will gain the upper hand? Lindbergh wants to increase the infrastructure of the country, Long and Smith push for industrialisation, Coughlin will let the country run itself while Kuhn wants support for his militaristic ambitions."
-unionstate.26.a:0 "Lindbergh knows what's best for the country"
-unionstate.26.b:0 "Long and Smith knows what's best for the country"
-unionstate.26.c:0 "Father Coughlin knows what's best for the country"
-unionstate.26.e:0 "Kuhn knows what's best for the country"
-unionstate.28.t:0 "The Supreme Court - 1940 elections"
-unionstate.28.d:0 "How will justice be administered? Kuhn wants to exterminate the traitors of the country, Coughlin wants to discriminate those who don't follow the true faith, Lindbergh wants a less oppressive system whereas Long and Smith are fine with the current one."
-unionstate.28.a:0 "Lindbergh's faction will bring justice!"
-unionstate.28.b:0 "Long's and Smith's faction will bring justice!"
-unionstate.28.c:0 "Father Coughlin's faction will bring justice!"
-unionstate.28.e:0 "Kuhn's faction will bring justice!"
-unionstate.30.t:0 "Lindbergh's faction wins"
-unionstate.30.d:0 "The people expressed their support for Lindbergh's faction, it is time for a new government of the American Union State. Charles Lindbergh will be Secretary of the Party, Henry Ford the Speaker of the House of Corporations, and Keith Thompson the Chairman of the Supreme Court."
-unionstate.30.a:0 "This is a true democracy!"
-unionstate.120.t:0 "Long's and Smith's faction wins"
-unionstate.120.d:0 "The people expressed their support for Long's and Smith's faction, it is time for a new government of the American Union State. Gerald Smith will be Secretary of the Party, Lawrence Dennis the Speaker of the House of Corporations, and Earl Williamson the Chairman of the Supreme Court."
-unionstate.120.a:0 "This is a true democracy!"
-unionstate.121.t:0 "Father Coughlin's faction wins"
-unionstate.121.d:0 "The people expressed their support for Coughlin's faction, it is time for a new government of the American Union State. Charles Coughlin will be Secretary of the Party, Prescott Sheldon Bush the Speaker of the House of Corporations, and William Bell Riley the Chairman of the Supreme Court."
-unionstate.121.a:0 "This is a true democracy!"
-unionstate.122.t:0 "Kuhn's faction wins"
-unionstate.122.d:0 "The people expressed their support for Kuhn's faction, it is time for a new government of the American Union State. Fritz Kuhn will be Secretary of the Party and Chairman of the Supreme Court and Prescott Bush will be the Speaker of the House of Corporations."
-unionstate.122.a:0 "This is a true democracy!"
-unionstate.123.t:0 "No consensus reached"
-unionstate.123.d:0 "Unfortunately no consensus was reached on the direction in which the American Union State should head on. However, there are currently talks between factions and it is possible that an agreement between the two of them will be reached soon."
-unionstate.123.a:0 "Lindbergh, Long, and Smith agree on a compromise"
-unionstate.123.b:0 "Father Coughlin and Kuhn faction agree on a compromise"
 unionstate.35.t:0 "New flag for the Republic"
 unionstate.35.d:0 "While most of the troops of the American Union State are battling both the old regime and the Combined Syndicates under the eagle banner of the America First Party, some units, especially those raised on the deep south, have been flying their own colours. As this situation has come to the attention of president Long, a special committee was raised to determine a single flag for all the forces of the Republic."
 unionstate.35.a:0 "Choose the 'Coast Guard' flag"
